# RFF-2.0

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CREDITS.txt  LICENSE  LICENSE.txt  NOTICE  README.md  THIRD-PARTY-LICENSE  apply_vkh.sh  compile.ps1  compile.sh  installer.ps1  installer.sh  installer_linux_ubuntu2404.sh  installer_windows.ps1  update
include/: glad.h  glad_wgl.h
src/vulkan_helper/: Application.cpp  CMakeLists.txt
src/vulkan_helper/configurator/: ComputePipelineConfigurator.cpp  ComputePipelineConfigurator.hpp  GeneralGraphicsPipelineConfigurator.cpp  GeneralGraphicsPipelineConfigurator.hpp  GeneralPipelineConfigurator.cpp  GeneralPipelineConfigurator.hpp  GeneralPostProcessGraphicsPipelineConfigurator.cpp  GeneralPostProcessGraphicsPipelineConfigurator.hpp  GeneralPostProcessPipelineConfigurator.cpp  GeneralPostProcessPipelineConfigurator.hpp  GraphicsPipelineConfigurator.hpp  PipelineConfigurator.hpp  RenderContextConfigurator.hpp
src/vulkan_helper/context/: BufferContext.hpp  DescriptorRequiresRepoContext.hpp  DescriptorUpdateContext.hpp  ImageContext.hpp  RenderContext.hpp  SharedImageContext.hpp  WindowContext.cpp  WindowContext.hpp
src/vulkan_helper/core/: CMakeLists.txt  Core.cpp  Instance.cpp  LogicalDevice.cpp  PhysicalDeviceLoader.cpp  ValidationLayer.cpp  config.hpp  logger.hpp  vkh.hpp  vkh_base.hpp  vkh_core.hpp
src/vulkan_helper/def/: BufferObject.cpp  BufferObject.hpp  CombinedImageSampler.cpp  CombinedImageSampler.hpp  CommandBuffer.cpp  CommandBuffer.hpp  CommandPool.cpp  CommandPool.hpp  Core.cpp  Core.hpp  Descriptor.cpp  Descriptor.hpp  DescriptorSetLayout.cpp  DescriptorSetLayout.hpp  Engine.cpp  Engine.hpp  Factory.hpp  Framebuffer.cpp  GraphicsContextWindow.cpp  GraphicsContextWindow.hpp  HostBufferObject.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Instance.cpp  Instance.hpp  LogicalDevice.hpp  PhysicalDevice.cpp  PhysicalDevice.hpp  Pipeline.cpp  Pipeline.hpp  PipelineLayout.cpp  PipelineLayout.hpp  RenderPass.cpp  RenderPass.hpp  Sampler.cpp  Sampler2D.cpp  Sampler2D.hpp  ShaderStorage.cpp  ShaderStorage.hpp  Surface.cpp  (+11 more)
src/vulkan_helper/dependency/: CMakeLists.txt
src/vulkan_helper/engine/: CMakeLists.txt  Engine.cpp  SharedResource.cpp
src/vulkan_helper/engine/buffer/: BufferObject.cpp  CMakeLists.txt  IndexBuffer.cpp  ShaderStorage.cpp  Uniform.cpp  VertexBuffer.cpp
src/vulkan_helper/engine/cmd/: CMakeLists.txt  CommandBuffer.cpp  CommandPool.cpp
src/vulkan_helper/engine/configurator/: CMakeLists.txt  ComputePipelineConfigurator.cpp  GeneralGraphicsPipelineConfigurator.cpp  GeneralPostProcessGraphicsPipelineConfigurator.cpp
src/vulkan_helper/engine/context/: BufferContext.cpp  CMakeLists.txt  ImageContext.cpp  RenderContext.cpp  SharedImageContext.cpp  WindowContext.cpp
src/vulkan_helper/engine/descriptor/: CMakeLists.txt  Descriptor.cpp  DescriptorSetLayout.cpp
src/vulkan_helper/engine/executor/: CMakeLists.txt  RenderPassFullscreenRecorder.cpp  ScopedCommandBufferExecutor.cpp  ScopedNewCommandBufferExecutor.cpp
src/vulkan_helper/engine/graphics/: CMakeLists.txt  Framebuffer.cpp  RenderPass.cpp  RenderPassGraphGenerator.cpp  RenderPassGraphGeneratorBase.cpp  Renderer.cpp
src/vulkan_helper/exception/: exception.hpp
src/vulkan_helper/executor/: Executor.hpp  RenderPassExecutor.cpp  RenderPassExecutor.hpp  RenderPassFullscreenExecutor.cpp  RenderPassFullscreenExecutor.hpp  RenderPassFullscreenRecorder.cpp  RenderPassFullscreenRecorder.hpp  ScopedCommandBufferExecutor.cpp  ScopedCommandBufferExecutor.hpp  ScopedCommandExecutor.cpp  ScopedCommandExecutor.hpp  ScopedNewCommandBufferExecutor.cpp  ScopedNewCommandBufferExecutor.hpp  ScopedSyncedCommandBufferExecutorForRenderPass.cpp  ScopedSyncedCommandBufferExecutorForRenderPass.hpp
src/vulkan_helper/handle/: CoreHandler.hpp  EngineHandler.hpp  Handler.hpp
src/vulkan_helper/hash/: PipelineLayoutManagerPtrHasher.hpp  PointerDerefEquals.hpp  SamplerCreateInfoHasher.hpp  UniquePtrEquals.hpp  UniquePtrHasher.hpp  VectorHasher.hpp
src/vulkan_helper/impl/: BufferObject.cpp  BufferObject.hpp  CombinedImageSampler.cpp  CombinedImageSampler.hpp  CombinedMultiframeImageSampler.cpp  CombinedMultiframeImageSampler.hpp  CommandBuffer.cpp  CommandBuffer.hpp  CommandPool.cpp  CommandPool.hpp  ComputeShaderPipeline.cpp  ComputeShaderPipeline.hpp  Core.cpp  Core.hpp  Descriptor.cpp  Descriptor.hpp  DescriptorSetLayout.cpp  DescriptorSetLayout.hpp  Engine.cpp  Engine.hpp  Fence.cpp  Fence.hpp  FrameSyncObject.cpp  FrameSyncObject.hpp  Framebuffer.cpp  Framebuffer.hpp  GraphicsContextWindow.cpp  GraphicsContextWindow.hpp  GraphicsPipeline.cpp  GraphicsPipeline.hpp  HostBufferObject.hpp  HostDataObject.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Instance.cpp  Instance.hpp  LogicalDevice.cpp  LogicalDevice.hpp  PhysicalDevice.cpp  PhysicalDevice.hpp  (+31 more)
src/vulkan_helper/manage/: BufferObjectManager.hpp  CompleteBufferObjectManager.hpp  CompleteShaderObjectManager.hpp  DescriptorManager.hpp  HostBufferObjectManager.hpp  PipelineLayoutManager.hpp  PipelineManager.hpp  PushConstantManager.hpp  RenderPassManager.hpp  ShaderObjectManager.hpp
src/vulkan_helper/repo/: DescriptorSetLayoutRepo.hpp  IRepo.hpp  PipelineLayoutRepo.hpp  Repo.hpp  Repositories.hpp  SamplerRepo.hpp  ShaderModuleRepo.hpp  SharedDescriptorRepo.hpp
src/vulkan_helper/struct/: BufferInitInfo.hpp  DescriptorSetLayoutBuildType.hpp  DescriptorTemplate.hpp  DescriptorTemplateInfo.hpp  EnumHasher.hpp  ImageInitInfo.hpp  PushConstantReserve.hpp  QueueFamilyIndices.hpp  RenderPassAttachment.hpp  RenderPassProcess.hpp  StringHasher.hpp  Vertex.hpp
src/vulkan_helper/util/: BarrierUtils.cpp  BarrierUtils.hpp  BufferImageContextUtils.cpp  BufferImageContextUtils.hpp  BufferImageUtils.cpp  BufferImageUtils.hpp  CMakeLists.txt  Debugger.cpp  Debugger.hpp  DescriptorUpdater.cpp  DescriptorUpdater.hpp  GraphicsContextWindowProc.hpp  ImageContextUtils.hpp  IndexChecker.hpp  PhysicalDeviceUtils.cpp  PhysicalDeviceUtils.hpp  Presenter.hpp  SafeArrayChecker.hpp  SwapchainPresenter.hpp  SwapchainUtils.cpp  SwapchainUtils.hpp  logger.hpp
(+1105 files in other folders)
